@@ -3,14 +3,10 @@ package launcher.model;
 import com.icecold.javascript.JavaScriptObjectNotation;
 import com.icecold.javascript.parser.JavaScriptStaticParser;
 import com.icecold.javascript.particulars.JavaScriptObject;
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -22,176 +18,83 @@ import launcher.model.objetosJs.ObjetoDeInstalacion;
 public class MotorLanzamiento {
 
     public Process arrancarJuego(String nombreInstancia, String username, int ramMb, int opcionDistribucion) {
-
         String dirRaiz = System.getProperty("user.dir");
         String baseDir = dirRaiz + "/portable/.minecraft";
         String instanciaDir = dirRaiz + "/portable/instancias/" + nombreInstancia;
 
         File jsonFile = new File(instanciaDir + "/instrucciones.json");
-
-        if (!jsonFile.exists()) {
-            return null;
-        }
+        if (!jsonFile.exists()) return null;
 
         try {
             String contenidoJson = new String(Files.readAllBytes(jsonFile.toPath()), StandardCharsets.UTF_8);
             boolean esCleanroom = contenidoJson.toLowerCase().contains("cleanroom");
 
-            String javaExec;
-            if (esCleanroom) {
-                if (opcionDistribucion == 1) {
-                    javaExec = dirRaiz + "/portable/runtimes/jdk25Adoptium/bin/java.exe";
-                } else {
-                    javaExec = dirRaiz + "/portable/runtimes/jdk25Graal/bin/java.exe";
-                }
-            } else {
-                if (opcionDistribucion == 1) {
-                    javaExec = dirRaiz + "/portable/runtimes/Adoptium/bin/java.exe";
-                } else {
-                    javaExec = dirRaiz + "/portable/runtimes/Graal/bin/java.exe";
-                }
-            }
+            String javaExec = esCleanroom 
+                ? ((opcionDistribucion == 1) ? dirRaiz + "/portable/runtimes/jdk25Adoptium/bin/java.exe" : dirRaiz + "/portable/runtimes/jdk25Graal/bin/java.exe")
+                : ((opcionDistribucion == 1) ? dirRaiz + "/portable/runtimes/Adoptium/bin/java.exe" : dirRaiz + "/portable/runtimes/Graal/bin/java.exe");
 
             File dirNatives = new File(baseDir + "/bin/natives");
-
             new File(instanciaDir).mkdirs();
             limpiarDirectorio(dirNatives);
             dirNatives.mkdirs();
 
-            File configDir = new File(instanciaDir + "/config");
-            configDir.mkdirs();
-            File forgeConfig = new File(configDir, "forge.cfg");
-
-            if (!forgeConfig.exists()) {
-                String cfgOptimo = "version_checking {\n    B:disableVersionCheck=true\n}\n";
-                try {
-                    Files.write(forgeConfig.toPath(), cfgOptimo.getBytes(StandardCharsets.UTF_8));
-                } catch (Exception e) {
-                }
-            }
-
-            JavaScriptObjectNotation jsonParsed = JavaScriptStaticParser.parse(contenidoJson);
-            ObjetoDeInstalacion instalacion = new ObjetoDeInstalacion();
-            instalacion.setObject((JavaScriptObject) jsonParsed);
-
             List<String> jars = new ArrayList<>();
+            procesarLibreriasJson(jsonFile, baseDir, dirNatives, jars, esCleanroom);
 
-            for (int j = 0; j < instalacion.libraries.size(); j++) {
-                boolean permitir = true;
-                if (instalacion.libraries.get(j).rules != null && !instalacion.libraries.get(j).rules.isEmpty()) {
-                    if (instalacion.libraries.get(j).rules.get(0).os != null) {
-                        String osName = instalacion.libraries.get(j).rules.get(0).os.name;
-                        if (!osName.equals("windows")) {
-                            permitir = false;
-                        }
-                    }
-                }
-
-                if (permitir) {
-                    String path = instalacion.libraries.get(j).downloads.artifacts.path;
-                    String rutaAbsoluta = new File(baseDir + "/libraries/" + path).getAbsolutePath();
-
-                    if (path.contains("natives-windows")) {
-                        extraerNativos(rutaAbsoluta, dirNatives);
-                    }
-                    jars.add(rutaAbsoluta);
-                }
+            File vanillaJson = new File(baseDir + "/versions/1.12.2/1.12.2.json");
+            if (vanillaJson.exists()) {
+                procesarLibreriasJson(vanillaJson, baseDir, dirNatives, jars, esCleanroom);
             }
 
-            List<String> todasLasLibrerias = new ArrayList<>();
-            recorrer(new File(baseDir + "/libraries"), todasLasLibrerias);
+            String mainJar = new File(baseDir + "/versions/1.12.2/1.12.2.jar").getAbsolutePath();
+            if (!jars.contains(mainJar)) jars.add(mainJar);
 
-            for (String libExtra : todasLasLibrerias) {
-
-                if (esCleanroom) {
-                    if (libExtra.contains("lwjgl-2.") || libExtra.contains("lwjgl_util-2.") || libExtra.contains("lwjgl-platform-2.")) {
-                        continue;
-                    }
-                    if (libExtra.contains("lwjgl") && !libExtra.contains("3.3.6") && !libExtra.contains("lwjglxx") && !libExtra.contains("librarylwjglopenal")) {
-                        continue;
-                    }
-                } else {
-                    if (libExtra.contains("cleanroom") || libExtra.contains("foundation") || libExtra.contains("imaginebreaker") || libExtra.contains("lwjglxx") || libExtra.contains("mixinextras")) {
-                        continue;
-                    }
-                    if (libExtra.contains("lwjgl") && (libExtra.contains("-3.") || libExtra.contains("/3.") || libExtra.contains("\\3.") || libExtra.contains("lwjgl3"))) {
-                        continue;
-                    }
-                }
-
-                if (libExtra.contains("natives-windows")) {
-                    extraerNativos(libExtra, dirNatives);
-                    if (!esCleanroom) {
-                        continue;
-                    }
-                }
-
-                if (!jars.contains(libExtra)) {
-                    jars.add(libExtra);
-                }
+            StringBuilder classPathBuilder = new StringBuilder();
+            for (int i = 0; i < jars.size(); i++) {
+                classPathBuilder.append(jars.get(i)).append(i < jars.size() - 1 ? File.pathSeparator : "");
             }
-
-            jars.add(new File(baseDir + "/versions/1.12.2/1.12.2.jar").getAbsolutePath());
-            String classpathCompleto = String.join(File.pathSeparator, jars);
 
             List<String> args = new ArrayList<>();
-
             args.add("-Xms" + ramMb + "m");
             args.add("-Xmx" + ramMb + "m");
 
             if (esCleanroom) {
                 args.add("-XX:+UseZGC");
-                args.add("-XX:+ZGenerational");
-            }
-
-            args.add("-Djava.library.path=" + dirNatives.getAbsolutePath());
-            args.add("-Djdk.attach.allowAttachSelf=true");
-
-            if (esCleanroom) {
+                args.add("-XX:+UseCompactObjectHeaders");
                 args.add("--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED");
                 args.add("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED");
                 args.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
                 args.add("--add-opens=java.base/java.security=ALL-UNNAMED");
                 args.add("--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED");
-            }
-
-            args.add("-Dforge.disableVersionCheck=true");
-            args.add("-Djna.tmpdir=" + dirNatives.getAbsolutePath());
-            args.add("-cp");
-            args.add(classpathCompleto);
-
-            if (esCleanroom) {
-                args.add("top.outlands.foundation.boot.Foundation");
             } else {
-                args.add("net.minecraft.launchwrapper.Launch");
+                args.add("-XX:+UseG1GC");
+                args.add("-XX:+UnlockExperimentalVMOptions");
+                args.add("-XX:MaxGCPauseMillis=50");
+                args.add("-XX:+DisableExplicitGC");
             }
 
-            args.add("--username");
-            args.add(username);
-            args.add("--version");
-            args.add(nombreInstancia);
-            args.add("--gameDir");
-            args.add(instanciaDir);
-            args.add("--assetsDir");
-            args.add(baseDir + "/assets");
-            args.add("--assetIndex");
-            args.add("1.12");
-            args.add("--uuid");
-            args.add("null");
-            args.add("--accessToken");
-            args.add("null");
-            args.add("--userType");
-            args.add("mojang");
-            args.add("--tweakClass");
-            args.add("net.minecraftforge.fml.common.launcher.FMLTweaker");
-            args.add("--versionType");
-            args.add("Forge");
+            args.add("-Djava.library.path=" + dirNatives.getAbsolutePath());
+            args.add("-Dforge.disableVersionCheck=true");
+            args.add("-cp");
+            args.add(classPathBuilder.toString());
+            args.add(esCleanroom ? "top.outlands.foundation.boot.Foundation" : "net.minecraft.launchwrapper.Launch");
 
-            List<String> comandoLaunch = new ArrayList<>();
-            comandoLaunch.add(javaExec);
-            comandoLaunch.addAll(args);
+            args.add("--username"); args.add(username);
+            args.add("--version"); args.add(nombreInstancia);
+            args.add("--gameDir"); args.add(instanciaDir);
+            args.add("--assetsDir"); args.add(baseDir + "/assets");
+            args.add("--assetIndex"); args.add("1.12");
+            args.add("--uuid"); args.add("null");
+            args.add("--accessToken"); args.add("null");
+            args.add("--userType"); args.add("mojang");
+            args.add("--tweakClass"); args.add("net.minecraftforge.fml.common.launcher.FMLTweaker");
+            args.add("--versionType"); args.add("Forge");
 
-            ProcessBuilder pb = new ProcessBuilder(comandoLaunch);
+            ProcessBuilder pb = new ProcessBuilder();
+            List<String> fullCommand = new ArrayList<>();
+            fullCommand.add(javaExec);
+            fullCommand.addAll(args);
+            pb.command(fullCommand);
             pb.directory(new File(instanciaDir));
             pb.redirectErrorStream(true);
             return pb.start();
@@ -202,14 +105,65 @@ public class MotorLanzamiento {
         }
     }
 
-    private static void recorrer(File carpeta, List<String> lista) {
+    private void procesarLibreriasJson(File jsonFile, String baseDir, File dirNatives, List<String> jars, boolean esCleanroom) {
+        try {
+            String contenidoJson = new String(Files.readAllBytes(jsonFile.toPath()), StandardCharsets.UTF_8);
+            JavaScriptObjectNotation jsonParsed = JavaScriptStaticParser.parse(contenidoJson);
+            ObjetoDeInstalacion instalacion = new ObjetoDeInstalacion();
+            instalacion.setObject((JavaScriptObject) jsonParsed);
+
+            for (int j = 0; j < instalacion.libraries.size(); j++) {
+                try {
+                    boolean permitir = true;
+                    if (instalacion.libraries.get(j).rules != null && !instalacion.libraries.get(j).rules.isEmpty()) {
+                        if (instalacion.libraries.get(j).rules.get(0).os != null) {
+                            String osName = instalacion.libraries.get(j).rules.get(0).os.name;
+                            if (osName != null && !osName.equals("windows")) permitir = false;
+                        }
+                    }
+
+                    if (permitir) {
+                        String path = null;
+                        if (instalacion.libraries.get(j).downloads != null && instalacion.libraries.get(j).downloads.artifacts != null) {
+                            path = instalacion.libraries.get(j).downloads.artifacts.path;
+                        }
+
+                        if (path != null) {
+                            if (esCleanroom && (path.contains("lwjgl-2") || path.contains("lwjgl_util-2"))) continue;
+                            
+                            String rutaAbsoluta = new File(baseDir + "/libraries/" + path).getAbsolutePath();
+                            
+                            if (path.contains("natives-windows") || path.contains("platform-windows")) {
+                                extraerNativos(rutaAbsoluta, dirNatives);
+                            }
+                            if (!jars.contains(rutaAbsoluta) && new File(rutaAbsoluta).exists()) {
+                                jars.add(rutaAbsoluta);
+                            }
+                        }
+                    }
+                } catch (Exception e) { }
+            }
+            
+            if (!esCleanroom) {
+                // ESCANEO DE SEGURIDAD PARA FORGE: Busca cualquier JAR de nativos y lo extrae
+                File libFolder = new File(baseDir + "/libraries/org/lwjgl");
+                buscarYExtraerNativos(libFolder, dirNatives);
+            }
+            
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void buscarYExtraerNativos(File carpeta, File dirNatives) {
+        if (!carpeta.exists() || !carpeta.isDirectory()) return;
         File[] archivos = carpeta.listFiles();
         if (archivos != null) {
             for (File f : archivos) {
                 if (f.isDirectory()) {
-                    recorrer(f, lista);
-                } else if (f.getName().endsWith(".jar")) {
-                    lista.add(f.getAbsolutePath());
+                    buscarYExtraerNativos(f, dirNatives);
+                } else if (f.getName().endsWith(".jar") && f.getName().contains("natives-windows")) {
+                    extraerNativos(f.getAbsolutePath(), dirNatives);
                 }
             }
         }
@@ -217,36 +171,22 @@ public class MotorLanzamiento {
 
     private static void extraerNativos(String jarPath, File dirNatives) {
         File jarFile = new File(jarPath);
-        if (!jarFile.exists()) {
-            return;
-        }
-
+        if (!jarFile.exists()) return;
         try (JarFile jar = new JarFile(jarFile)) {
             Enumeration<JarEntry> entries = jar.entries();
             while (entries.hasMoreElements()) {
                 JarEntry entry = entries.nextElement();
-                String name = entry.getName();
-                if (!entry.isDirectory() && (name.endsWith(".dll") || name.endsWith(".so") || name.endsWith(".dylib") || name.endsWith(".jnilib"))) {
-                    File dest = new File(dirNatives, new File(name).getName());
-                    try (InputStream is = jar.getInputStream(entry)) {
-                        Files.copy(is, dest.toPath(), StandardCopyOption.REPLACE_EXISTING);
-                    }
+                if (!entry.isDirectory() && entry.getName().endsWith(".dll")) {
+                    Files.copy(jar.getInputStream(entry), new File(dirNatives, new File(entry.getName()).getName()).toPath(), StandardCopyOption.REPLACE_EXISTING);
                 }
             }
-        } catch (Exception e) {
-        }
+        } catch (Exception e) { }
     }
 
     private static void limpiarDirectorio(File directorio) {
-        if (directorio.exists() && directorio.isDirectory()) {
-            File[] archivos = directorio.listFiles();
-            if (archivos != null) {
-                for (File f : archivos) {
-                    if (!f.isDirectory()) {
-                        f.delete();
-                    }
-                }
-            }
+        File[] archivos = directorio.listFiles();
+        if (archivos != null) {
+            for (File f : archivos) f.delete();
         }
     }
 }
